Changed location for images and css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Screen</title>
-    <link rel="stylesheet" href="styles1.css" type="text/css">
+    <link rel="stylesheet" href="assets/styles1.css" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
         integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
@@ -19,7 +19,7 @@
             <div class="header-container">
                 <div class="header-first-container">
                     <div>
-                        <img src="images/logo.jpg">
+                        <img src="assets/logo.jpg">
 
                     </div>
                     <div>
@@ -49,7 +49,7 @@
 
                     </div>
                     <div class="profileimage">
-                        <img src="images/samay-raina.jpg">
+                        <img src="assets/samay-raina.jpg">
 
 
                     </div>
@@ -62,9 +62,9 @@
         Main class contains carousel section,Latest release,Popular artist,Stations,Latest English and Latest Hindi-->
         <main class="page-body">
             <section class="album-container">
-                <img src="images/album-cover-1.jpg">
-                <img src="images/album-cover-2.jpg">
-                <img src="images/album-cover-3.jpg">
+                <img src="assets/album-cover-1.jpg">
+                <img src="assets/album-cover-2.jpg">
+                <img src="assets/album-cover-3.jpg">
 
             </section>
             <!--Release section starts from here-->
@@ -73,7 +73,7 @@
                 <div class="release-container">
                     <div class="music-container">
                         <div>
-                            <img src="images/album-cover-4.jpg">
+                            <img src="assets/album-cover-4.jpg">
 
                         </div>
                         <div class="music-name">
@@ -90,7 +90,7 @@
                     </div>
                     <div class="music-container">
                         <div>
-                            <img src="images/album-cover-4.jpg">
+                            <img src="assets/album-cover-4.jpg">
 
                         </div>
                         <div class="music-name">
@@ -107,7 +107,7 @@
                     </div>
                     <div class="music-container">
                         <div>
-                            <img src="images/album-cover-4.jpg">
+                            <img src="assets/album-cover-4.jpg">
 
                         </div>
                         <div class="music-name">
@@ -125,7 +125,7 @@
 
                     <div class="music-container">
                         <div>
-                            <img src="images/album-cover-4.jpg">
+                            <img src="assets/album-cover-4.jpg">
 
                         </div>
                         <div class="music-name">
@@ -142,7 +142,7 @@
                     </div>
                     <div class="music-container">
                         <div>
-                            <img src="images/album-cover-4.jpg">
+                            <img src="assets/album-cover-4.jpg">
 
                         </div>
                         <div class="music-name">
@@ -159,7 +159,7 @@
                     </div>
                     <div class="music-container">
                         <div>
-                            <img src="images/album-cover-4.jpg">
+                            <img src="assets/album-cover-4.jpg">
 
                         </div>
                         <div class="music-name">
@@ -186,42 +186,42 @@
                 <h3>Popular artist</h3>
                 <div class="artist">
                     <div>
-                        <img src="images/eminem.jpg"><br>
+                        <img src="assets/eminem.jpg"><br>
                         <div><i class="fas fa-play"></i></div>
                         <span>Eminem</span>
 
                     </div>
                     <div>
-                        <img src="images/alicia-keys.png"><br>
+                        <img src="assets/alicia-keys.png"><br>
                         <span>Alicia-keys</span>
 
                     </div>
                     <div>
-                        <img src="images/ed-sheeran.jpg"><br>
+                        <img src="assets/ed-sheeran.jpg"><br>
                         <span>Ed Sheeran</span>
                     </div>
                     <div>
-                        <img src="images/adele.jpg"><br>
+                        <img src="assets/adele.jpg"><br>
                         <span>Adele</span>
                     </div>
                     <div>
-                        <img src="images/enrique-iglesias.jpg"><br>
+                        <img src="assets/enrique-iglesias.jpg"><br>
                         <span>Enrique</span>
                     </div>
                     <div>
-                        <img src="images/ariana-grande.jpg"><br>
+                        <img src="assets/ariana-grande.jpg"><br>
                         <span>Ariana grande</span>
                     </div>
                     <div>
-                        <img src="images/dua-lipa.jpg"><br>
+                        <img src="assets/dua-lipa.jpg"><br>
                         <span>Dua Lipa</span>
                     </div>
                     <div>
-                        <img src="images/billie-eilish.jpg"><br>
+                        <img src="assets/billie-eilish.jpg"><br>
                         <span>Billie Eilish</span>
                     </div>
                     <div>
-                        <img src="images/john-legend.jpg"><br>
+                        <img src="assets/john-legend.jpg"><br>
                         <span>John Legend</span>
                     </div>
                 </div>
@@ -243,32 +243,32 @@
                     <div>
                         <div class="theme-music">
                                <div>
-                                <img src="images/electronic-music.jpg">
+                                <img src="assets/electronic-music.jpg">
                                 <div class="music-type">Rock</div>
 
                                </div> 
                                <div>
-                                <img src="images/jazz-music.jpg">
+                                <img src="assets/jazz-music.jpg">
                                 <div class="music-type">Jazz</div>
 
                                </div> 
                                <div>
-                                <img src="images/party-music.jpg">
+                                <img src="assets/party-music.jpg">
                                 <div class="music-type">Trap</div>
 
                                </div> 
                                <div>
-                                <img src="images/retro-music.jpg">
+                                <img src="assets/retro-music.jpg">
                                 <div class="music-type">Retro</div>
 
                                </div> 
                                <div>
-                                <img src="images/road-trip.jpg">
+                                <img src="assets/road-trip.jpg">
                                 <div class="music-type">Travel</div>
 
                                </div> 
                                <div>
-                                <img src="images/country-music.jpg">
+                                <img src="assets/country-music.jpg">
                                 <div class="music-type">Country</div>
 
                                </div> 
@@ -281,17 +281,17 @@
             <section id="music-genre">
                 <div class="genre-container">
                     <div class="genre-stations">
-                        <img src="images/party-music.jpg">
+                        <img src="assets/party-music.jpg">
                         <div>Party</div>
 
                     </div>
                     <div class="genre-stations">
-                        <img src="images/electronic-music.jpg">
+                        <img src="assets/electronic-music.jpg">
                         <div>Electronic</div>
 
                     </div>
                     <div class="genre-stations">
-                        <img src="images/road-trip.jpg">
+                        <img src="assets/road-trip.jpg">
                         <div>Road Trip</div>
 
                     </div>
@@ -309,7 +309,7 @@
                 <div class="song-list">
                     <div class="label-tile">
 
-                        <img src="images/binding-lights.png">
+                        <img src="assets/binding-lights.png">
                         <span>Binding Lights</span>
                         <span>AUG 11,2021</span>
 
@@ -318,7 +318,7 @@
                     </div>
                     <div class="label-tile">
 
-                        <img src="images/circles.jpg">
+                        <img src="assets/circles.jpg">
                         <span>Circles</span>
                         <span>AUG 11,2021</span>
 
@@ -327,14 +327,14 @@
                     </div>
                     <div class="label-tile">
 
-                        <img src="images/let-it-go.jpg">
+                        <img src="assets/let-it-go.jpg">
                         <span>Let it go</span>
                         <span>AUG 11,2021</span>
 
                     </div>
                     <div class="label-tile">
 
-                        <img src="images/out-my-face.jpg">
+                        <img src="assets/out-my-face.jpg">
                         <span>Out My Face</span>
                         <span>AUG 11,2021</span>
 
@@ -343,7 +343,7 @@
                     </div>
                     <div class="label-tile">
 
-                        <img src="images/radioactive.jpg">
+                        <img src="assets/radioactive.jpg">
                         <span>Radioactive</span>
                         <span>AUG 11,2021</span>
 
@@ -352,7 +352,7 @@
                     </div>
                     <div class="label-tile">
 
-                        <img src="images/rescue-me.png">
+                        <img src="assets/rescue-me.png">
                         <span>Rescue Me</span>
                         <span>AUG 11,2021</span>
 
@@ -361,7 +361,7 @@
                     </div>
                     <div class="label-tile">
 
-                        <img src="images/Say-something.png">
+                        <img src="assets/Say-something.png">
                         <span>Say Something</span>
                         <span>AUG 11,2021</span>
 
@@ -383,7 +383,7 @@
                 <div class="song-list">
                     <div class="label-tile">
 
-                        <img src="images/tere-sang-mere.jpg">
+                        <img src="assets/tere-sang-mere.jpg">
                         <span>Tere Sang Yara</span>
                         <span>AUG 11,2021</span>
 
@@ -392,7 +392,7 @@
                     </div>
                     <div class="label-tile">
 
-                        <img src="images/Kaun_Tujhe.jpg">
+                        <img src="assets/Kaun_Tujhe.jpg">
 
 
 
@@ -404,14 +404,14 @@
                     </div>
                     <div class="label-tile">
 
-                        <img src="images/bekhayali.jpg">
+                        <img src="assets/bekhayali.jpg">
                         <span>Bekhayali</span>
                         <span>AUG 11,2021</span>
 
                     </div>
                     <div class="label-tile">
 
-                        <img src="images/galiyan.jpg">
+                        <img src="assets/galiyan.jpg">
                         <span>Galliyan</span>
                         <span>AUG 11,2021</span>
 
@@ -420,7 +420,7 @@
                     </div>
                     <div class="label-tile">
 
-                        <img src="images/Baarish.jpeg">
+                        <img src="assets/Baarish.jpeg">
                         <span>Barrish</span>
                         <span>AUG 11,2021</span>
 
@@ -429,7 +429,7 @@
                     </div>
                     <div class="label-tile">
 
-                        <img src="images/lahore.jpeg">
+                        <img src="assets/lahore.jpeg">
                         <span>Lahore</span>
                         <span>AUG 11,2021</span>
 
@@ -438,7 +438,7 @@
                     </div>
                     <div class="label-tile">
 
-                        <img src="images/tera-hua.jpg">
+                        <img src="assets/tera-hua.jpg">
                         <span>Tera hua</span>
                         <span>AUG 11,2021</span>
 
@@ -481,7 +481,7 @@
                 <div class="playlist-queue-container">
                     <div class="playlist-container">
                         <span class="playlist-no">01</span>
-                        <img class="playlist-img" src="images/circles.jpg">
+                        <img class="playlist-img" src="assets/circles.jpg">
                         <div class="playlist-text">
                             <span>Circles</span><br>
                             <span>Wildes</span>
@@ -492,7 +492,7 @@
                     </div>
                     <div class="playlist-container">
                         <span class="playlist-no">02</span>
-                        <img class="playlist-img" src="images/rescue-me.png">
+                        <img class="playlist-img" src="assets/rescue-me.png">
                         <div class="playlist-text">
                             <span>Rescue Me</span><br>
                             <span>One Republic</span>
@@ -503,7 +503,7 @@
                     </div>
                     <div class="playlist-container">
                         <span class="playlist-no">03</span>
-                        <img class="playlist-img" src="images/tera-hua.jpg">
+                        <img class="playlist-img" src="assets/tera-hua.jpg">
                         <div class="playlist-text">
                             <span>Tera hua</span><br>
                             <span>Else World</span>
@@ -514,7 +514,7 @@
                     </div>
                     <div class="playlist-container">
                         <span class="playlist-no">04</span>
-                        <img class="playlist-img" src="images/radioactive.jpg">
+                        <img class="playlist-img" src="assets/radioactive.jpg">
                         <div class="playlist-text">
                             <span>Radioactive</span><br>
                             <span>Imagine Dragon</span>
@@ -526,7 +526,7 @@
 
                     <div class="playlist-container">
                         <span class="playlist-no">05</span>
-                        <img class="playlist-img" src="images/binding-lights.png">
+                        <img class="playlist-img" src="assets/binding-lights.png">
                         <div class="playlist-text">
                             <span>Alone Again</span><br>
                             <span>Weekend</span>
@@ -538,7 +538,7 @@
 
                     <div class="playlist-container">
                         <span class="playlist-no">06</span>
-                        <img class="playlist-img" src="images/jazz-music.jpg">
+                        <img class="playlist-img" src="assets/jazz-music.jpg">
                         <div class="playlist-text">
                             <span>Mirage</span><br>
                             <span>Else World</span>
@@ -549,7 +549,7 @@
                     </div>
                     <div class="playlist-container">
                         <span class="playlist-no">07</span>
-                        <img class="playlist-img" src="images/road-trip.jpg">
+                        <img class="playlist-img" src="assets/road-trip.jpg">
                         <div class="playlist-text">
                             <span>Mirage</span><br>
                             <span>Else World</span>
@@ -560,7 +560,7 @@
                     </div>
                     <div class="playlist-container">
                         <span class="playlist-no">08</span>
-                        <img class="playlist-img" src="images/Say-something.png">
+                        <img class="playlist-img" src="assets/Say-something.png">
                         <div class="playlist-text">
                             <span>Say Something</span><br>
                             <span>Else World</span>
@@ -571,7 +571,7 @@
                     </div>
                     <div class="playlist-container">
                         <span class="playlist-no">09</span>
-                        <img class="playlist-img" src="images/circles.jpg">
+                        <img class="playlist-img" src="assets/circles.jpg">
                         <div class="playlist-text">
                             <span>Circles</span><br>
                             <span>Wildes</span>
@@ -582,7 +582,7 @@
                     </div>
                     <div class="playlist-container">
                         <span class="playlist-no">10</span>
-                        <img class="playlist-img" src="images/lahore.jpeg">
+                        <img class="playlist-img" src="assets/lahore.jpeg">
                         <div class="playlist-text">
                             <span>Lahore</span><br>
                             <span>Else World</span>
@@ -593,7 +593,7 @@
                     </div>
                     <div class="playlist-container">
                         <span class="playlist-no">11</span>
-                        <img class="playlist-img" src="images/let-it-go.jpg">
+                        <img class="playlist-img" src="assets/let-it-go.jpg">
                         <div class="playlist-text">
                             <span>Let it go</span><br>
                             <span>Frozen</span>
@@ -611,7 +611,7 @@
             <div class="music-player">
                 <div class="active-song-description">
                     <div id="song-image">
-                        <img src="images/artist-7.jpg">
+                        <img src="assets/artist-7.jpg">
 
                     </div>
                     <div id="song-text">
