--- a/single-playlist-screen.html
+++ b/single-playlist-screen.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Single Playlist Screen</title>
-    <link rel="stylesheet" href="playlist-styles.css" type="text/css">
+    <link rel="stylesheet" href="assets/playlist-styles.css" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
         integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
@@ -17,7 +17,7 @@
         <div class="header-container">
             <div class="header-first-container">
                 <div>
-                    <img src="images/logo.jpg">
+                    <img src="assets/logo.jpg">
 
                 </div>
                 <div>
@@ -47,7 +47,7 @@
 
                 </div>
                 <div class="profileimage">
-                    <img src="images/samay-raina.jpg">
+                    <img src="assets/samay-raina.jpg">
 
 
                 </div>
@@ -62,7 +62,7 @@
         <section id="middle-section">
             <div class="jumbotron">
                 <div class="jumbotron-image">
-                    <img src="images/ariana-grande.jpg">
+                    <img src="assets/ariana-grande.jpg">
 
                 </div>
                 <div class="jumbotron-details">
@@ -99,7 +99,7 @@
                 <div class="playlist-item">
                     <div class="left">
                         <span id="album-id">01</span>
-                        <img id ="album-img" src="images/artist-2.jpg">
+                        <img id ="album-img" src="assets/artist-2.jpg">
                         <div id="album-info">
                             <span>Alone</span><br>
                             <span>Alan Walker</span>
@@ -123,7 +123,7 @@
                 <div class="playlist-item">
                     <div class="left">
                         <span id="album-id">01</span>
-                        <img id ="album-img" src="images/artist-2.jpg">
+                        <img id ="album-img" src="assets/artist-2.jpg">
                         <div id="album-info">
                             <span>Alone</span><br>
                             <span>Alan Walker</span>
@@ -147,7 +147,7 @@
                 <div class="playlist-item">
                     <div class="left">
                         <span id="album-id">01</span>
-                        <img id ="album-img" src="images/artist-2.jpg">
+                        <img id ="album-img" src="assets/artist-2.jpg">
                         <div id="album-info">
                             <span>Alone</span><br>
                             <span>Alan Walker</span>
@@ -171,7 +171,7 @@
                 <div class="playlist-item">
                     <div class="left">
                         <span id="album-id">01</span>
-                        <img id ="album-img" src="images/artist-2.jpg">
+                        <img id ="album-img" src="assets/artist-2.jpg">
                         <div id="album-info">
                             <span>Alone</span><br>
                             <span>Alan Walker</span>
@@ -195,7 +195,7 @@
                 <div class="playlist-item">
                     <div class="left">
                         <span id="album-id">01</span>
-                        <img id ="album-img" src="images/artist-2.jpg">
+                        <img id ="album-img" src="assets/artist-2.jpg">
                         <div id="album-info">
                             <span>Alone</span><br>
                             <span>Alan Walker</span>
@@ -219,7 +219,7 @@
                 <div class="playlist-item">
                     <div class="left">
                         <span id="album-id">01</span>
-                        <img id ="album-img" src="images/artist-2.jpg">
+                        <img id ="album-img" src="assets/artist-2.jpg">
                         <div id="album-info">
                             <span>Alone</span><br>
                             <span>Alan Walker</span>
@@ -243,7 +243,7 @@
                 <div class="playlist-item">
                     <div class="left">
                         <span id="album-id">01</span>
-                        <img id ="album-img" src="images/artist-2.jpg">
+                        <img id ="album-img" src="assets/artist-2.jpg">
                         <div id="album-info">
                             <span>Alone</span><br>
                             <span>Alan Walker</span>
@@ -267,7 +267,7 @@
                 <div class="playlist-item">
                     <div class="left">
                         <span id="album-id">01</span>
-                        <img id ="album-img" src="images/artist-2.jpg">
+                        <img id ="album-img" src="assets/artist-2.jpg">
                         <div id="album-info">
                             <span>Alone</span><br>
                             <span>Alan Walker</span>
@@ -291,7 +291,7 @@
                 <div class="playlist-item">
                     <div class="left">
                         <span id="album-id">01</span>
-                        <img id ="album-img" src="images/artist-2.jpg">
+                        <img id ="album-img" src="assets/artist-2.jpg">
                         <div id="album-info">
                             <span>Alone</span><br>
                             <span>Alan Walker</span>
@@ -315,7 +315,7 @@
                 <div class="playlist-item">
                     <div class="left">
                         <span id="album-id">01</span>
-                        <img id ="album-img" src="images/artist-2.jpg">
+                        <img id ="album-img" src="assets/artist-2.jpg">
                         <div id="album-info">
                             <span>Alone</span><br>
                             <span>Alan Walker</span>
@@ -363,7 +363,7 @@
             <div class="similar-artists">
                 <div class="music-container">
                     <div class="music-image">
-                        <img src="images/binding-lights.png">
+                        <img src="assets/binding-lights.png">
 
                     </div>
                     <div class="music-name">
@@ -381,7 +381,7 @@
 
                 <div class="music-container">
                     <div class="music-image">
-                        <img src="images/artist-1.jpg">
+                        <img src="assets/artist-1.jpg">
 
                     </div>
                     <div class="music-name">
@@ -398,7 +398,7 @@
                 </div>
                 <div class="music-container">
                     <div class="music-image">
-                        <img src="images/artist-1.jpg">
+                        <img src="assets/artist-1.jpg">
 
                     </div>
                     <div class="music-name">
@@ -415,7 +415,7 @@
                 </div>
                 <div class="music-container">
                     <div class="music-image">
-                        <img src="images/artist-1.jpg">
+                        <img src="assets/artist-1.jpg">
 
                     </div>
                     <div class="music-name">
@@ -451,7 +451,7 @@
             <div class="playlist-queue-container">
                 <div class="playlist-container">
                     <span class="playlist-no">01</span>
-                    <img class="playlist-img" src="images/ed-sheeran.jpg">
+                    <img class="playlist-img" src="assets/ed-sheeran.jpg">
                     <div class="playlist-text">
                         <span>Mirage</span><br>
                         <span>Else World</span>
@@ -462,7 +462,7 @@
                 </div>
                 <div class="playlist-container">
                     <span class="playlist-no">02</span>
-                    <img class="playlist-img" src="images/eminem.jpg">
+                    <img class="playlist-img" src="assets/eminem.jpg">
                     <div class="playlist-text">
                         <span>Mirage</span><br>
                         <span>Else World</span>
@@ -474,7 +474,7 @@
 
                 <div class="playlist-container">
                     <span class="playlist-no">03</span>
-                    <img class="playlist-img" src="images/jazz-music.jpg">
+                    <img class="playlist-img" src="assets/jazz-music.jpg">
                     <div class="playlist-text">
                         <span>Mirage</span><br>
                         <span>Else World</span>
@@ -485,7 +485,7 @@
                 </div>
                 <div class="playlist-container">
                     <span class="playlist-no">04</span>
-                    <img class="playlist-img" src="images/road-trip.jpg">
+                    <img class="playlist-img" src="assets/road-trip.jpg">
                     <div class="playlist-text">
                         <span>Mirage</span><br>
                         <span>Else World</span>
@@ -496,7 +496,7 @@
                 </div>
                 <div class="playlist-container">
                     <span class="playlist-no">05</span>
-                    <img class="playlist-img" src="images/retro-music.jpg">
+                    <img class="playlist-img" src="assets/retro-music.jpg">
                     <div class="playlist-text">
                         <span>Mirage</span><br>
                         <span>Else World</span>
@@ -507,7 +507,7 @@
                 </div>
                 <div class="playlist-container">
                     <span class="playlist-no">06</span>
-                    <img class="playlist-img" src="images/party-music.jpg">
+                    <img class="playlist-img" src="assets/party-music.jpg">
                     <div class="playlist-text">
                         <span>Mirage</span><br>
                         <span>Else World</span>
@@ -518,7 +518,7 @@
                 </div>
                 <div class="playlist-container">
                     <span class="playlist-no">07</span>
-                    <img class="playlist-img" src="images/alicia-keys.png">
+                    <img class="playlist-img" src="assets/alicia-keys.png">
                     <div class="playlist-text">
                         <span>Mirage</span><br>
                         <span>Else World</span>
@@ -529,7 +529,7 @@
                 </div>
                 <div class="playlist-container">
                     <span class="playlist-no">08</span>
-                    <img class="playlist-img" src="images/adele.jpg">
+                    <img class="playlist-img" src="assets/adele.jpg">
                     <div class="playlist-text">
                         <span>Mirage</span><br>
                         <span>Else World</span>
@@ -548,7 +548,7 @@
         <div class="music-player">
             <div class="active-song-description">
                 <div id="song-image">
-                    <img src="images/artist-7.jpg">
+                    <img src="assets/artist-7.jpg">
 
                 </div>
                 <div id="song-text">
