--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
         <header id="body-header">
             <div class="header-container">
                 <div class="header-first-container">
-                    <div>
-                        <img src="assets/logo.jpg">
+                    <div id="Music-player-logo">
+                        <!-- <img src="assets/logo.jpg"> -->
+                        <i class="far fa-play-circle"></i>
 
                     </div>
-                    <div>
+                    <div id="music-player-name">
                         <span>Saurin</span><br>
-                        <span>Studio</span>
+                        <span>Music Player</span>
                     </div>
                 </div>
 
