added max width to imges

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Screen</title>
     <link rel="stylesheet" href="assets/styles1.css" type="text/css" />
+    <link rel="stylesheet" href="assets/primary_page_responsive.css">
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
@@ -159,7 +160,7 @@
           <div class="artist">
             <div>
               <img src="assets/eminem.jpg" /><br />
-              <div><i class="fas fa-play"></i></div>
+              
               <span>Eminem</span>
             </div>
             <div>
@@ -191,6 +192,10 @@
               <span>Billie Eilish</span>
             </div>
             <div>
+              <img src="assets/john-legend.jpg" /><br />
+              <span>John Legend</span>
+            </div>
+             <div>
               <img src="assets/john-legend.jpg" /><br />
               <span>John Legend</span>
             </div>
