added styling for 1024 screen

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Screen</title>
     <link rel="stylesheet" href="assets/styles1.css" type="text/css" />
-    <link rel="stylesheet" href="assets/primary_page_responsive.css">
+    <link rel="stylesheet" href="assets/primary_page_responsive.css" type="text/css"/>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
@@ -46,8 +46,10 @@
             </div>
             <div class="notification">
               <span><i class="fas fa-bell"></i></span>
+              <span>Notifications</span>
             </div>
             <div class="profileimage">
+              
               <img src="assets/samay-raina.jpg" />
             </div>
           </div>
@@ -63,7 +65,7 @@
         </section>
         <!--Release section starts from here-->
         <section class="release">
-          <h3>Latest Release</h3>
+          <h2>Latest Release</h2>
           <div class="release-container">
             <div class="music-container">
               <div>
@@ -156,7 +158,7 @@
         <!--Popular artist section starts from here-->
 
         <section id="popular-artists">
-          <h3>Popular artist</h3>
+          <h2>Popular artist</h2>
           <div class="artist">
             <div>
               <img src="assets/eminem.jpg" /><br />
